# TakaSecure-AI-based-Secure-Banking

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  TakaSecure_RunPod_Finetuning.ipynb  generate_banking_sft.py  pyproject.toml
artifacts/: README.md  takasecure-adapter-v3.zip.sha256
banking_dataset/: README.md  TakaSecure_RunPod_Finetuning.ipynb  generate_banking_sft.py
data/: README.md
data/rag/v4/: TakaSecure_Enterprise_Banking_Policy_Corpus_v4.manifest.json  TakaSecure_RAG_Evaluation_Benchmark_v4.jsonl  TakaSecure_RAG_Golden_50_v1.jsonl  TakaSecure_RAG_Golden_50_v1.report.json
data/sft/: banking_sft_test.jsonl  banking_sft_validation.jsonl  policy_catalog.json  quality_report.json
docs/: RAG_SYSTEM.md  TECHNICAL_REPORT.md
evaluation/ragas/: README.md
evaluation/ragas/smoke/: generation.jsonl  ragas_per_example.csv  summary.json
frontend/: app.js  index.html  styles.css
notebooks/: TakaSecure_RunPod_Finetuning.ipynb
scripts/: generate_banking_sft.py  generate_enterprise_rag_corpus.py  generate_rag_golden_set.py  run_ragas_evaluation.py
takasecure_rag/: __init__.py  authorization.py  cache.py  config.py  graph.py  main.py  retrieval.py  schemas.py
tests/: test_authorization.py  test_cache.py  test_response_contract.py
