[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "takasecure-rag"
version = "0.1.0"
description = "Model-routed adaptive hybrid RAG for the synthetic TakaSecure banking corpus"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic-settings>=2.10,<3",
  "langchain>=1.0,<2",
  "langchain-classic>=1.0,<2",
  "langchain-community>=0.4,<1",
  "langchain-openai>=1.0,<2",
  "langchain-qdrant>=1.0,<2",
  "langchain-huggingface>=1.0,<2",
  "langchain-text-splitters>=1.0,<2",
  "langgraph>=1.0,<2",
  "qdrant-client[fastembed]>=1.15,<2",
  "sentence-transformers>=5.1,<6",
  "upstash-redis>=1.4,<2",
  "pypdf>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<10", "ruff>=0.12,<1"]
eval = ["ragas>=0.4,<0.5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["takasecure_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
